--- a/FrontEnd/src/app/Rutas/ruta-pantalla-buscador/ruta-pantalla-buscador.component.html
+++ b/FrontEnd/src/app/Rutas/ruta-pantalla-buscador/ruta-pantalla-buscador.component.html
@@ -1,31 +1,114 @@
+<div class="container ">
 
-<!doctype html>
-<html lang="en">
-<head>
-  <meta charset="utf-8">
-  <title>BuscadorFront</title>
-  <base href="/">
 
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
-  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 
-</head>
+  <!-- Default form register -->
+  <form class="text-center border border-light p-5"  #f="ngForm" (ngSubmit)="pruebBoton(f)" novalidate >
 
-<div class="container">
-  <!-- Inicio BuscadorImagen -->
-  <div  class="row">
-    <div class="col-lg-12">
-      <img  height="350" width="100%" src="../../../assets/noticias.jpg">
+    <p class="h4 mb-4">Criterios de búsqueda</p>
+
+
+    <input type="text" class="form-control  mb-1" id="BrowQuery" name="BrowQuery" placeholder="Temática" autocomplete="off" ngModel />
+
+    <small id="BrowQuery" class="form-text text-muted mb-4">
+      Tema general para iniciar a crear la lista de actores y temas.
+    </small>
+
+
+
+
+
+
+
+    <div class="row">
+
+      <p class="h5 mb-3 col-md-12">Fuentes de información</p>
+
+
+      <div class="col-md-6 mb-4">
+        <div class="custom-control custom-checkbox">
+
+          <input type="checkbox" class="custom-control-input" id="fuente1">
+          <label class="custom-control-label" for="fuente1">Subscribe to our newsletter</label>
+
+
+        </div>
+        <div class="custom-control custom-checkbox">
+          <input type="checkbox" class="custom-control-input" id="fuente2">
+          <label class="custom-control-label" for="fuente2">Subscribe to our newsletter</label>
+
+        </div>
+
+      </div>
+      <div class="col-md-6">
+        <div class=" custom-control custom-checkbox">
+          <input type="checkbox" class="custom-control-input" id="fuente3">
+          <label class="custom-control-label" for="fuente3">Subscribe to our newsletter</label>
+
+        </div>
+
+        <div class=" custom-control custom-checkbox">
+          <input type="checkbox" class="custom-control-input" id="fuente3">
+          <label class="custom-control-label" for="fuente3">Subscribe to our newsletter</label>
+
+        </div>
+      </div>
+
     </div>
 
-  </div>
 
-  <!-- Fin Imagen -->
-  <form #f="ngForm" (ngSubmit)="onClickMe(f)" novalidate >
+
+    <div class="row">
+      <p class="h5 mb-3 col-md-12">Palabras clave</p>
+
+      <div class="col-md-12">
+
+        <form #formularioPC="ngForm" novalidate>
+
+
+          <input type="text" id="BrowPCx" name="BrowPCx" ngModel class="form-control" placeholder="Palabra clave"
+            aria-describedby="palabraCD">
+          <small id="palabraCD" class="form-text text-muted mb-2">
+            Opcional: puede ingresar palabras claves que orienten la creación de las listas
+          </small>
+
+
+
+          <datalist id="browpc">
+            <option *ngFor="let cbxpc of cbxpcs" value={{cbxpc}}>
+          </datalist>
+
+          <button  type="button" mdbBtn color="success" mdbWavesEffect (click)="onClickRol(formularioPC)">
+            Agregar roles
+          </button>
+        </form>
+
+      </div>
+
+
+
+      <div class="col-md-12">
+        <div *ngFor="let cbxpc of cbxpcs">
+
+          <button  mdbBtn type="button"  size="sm" color="elegant" mdbWavesEffect icon="pi pi-times" (click)="onClickMx(cbxpc)">
+            {{cbxpc}} <strong>X</strong>
+          </button>
+
+        </div>
+      </div>
+
+    </div>
+
+
+    <button class="btn btn-info my-4 btn-block" type="submit" [disabled]="!f.dirty">Generar lista</button>
+
+
+
+  </form>
+
+<!--
+
+  <form (ngSubmit)="pruebBoton(f)" novalidate>
     <div class="row">
       <div class="col-lg-4">
       </div>
@@ -44,7 +127,7 @@
 
             <label class="input-group-text" for="BrowQuery">Query</label>
           </div>
-          <input type="text" class="form-control"  id="BrowQuery" name="BrowQuery" autocomplete="off" ngModel/>
+          <input type="text" class="form-control" id="BrowQuery" name="BrowQuery" autocomplete="off" ngModel />
 
         </div>
       </div>
@@ -53,19 +136,22 @@
           <div class="input-group-prepend">
             <label class="input-group-text" for="BrowEstado">Fuente de la Informacion</label>
           </div>
-          <input class="custom-select" list="browestados" id="BrowEstado" name="BrowEstado" autocomplete="off" ngModel />
-          <datalist id="browestados" >
-            <option *ngFor="let cbxestad of cbxestado" value=  {{cbxestad}}>
-          </datalist></div></div>
+          <input class="custom-select" list="browestados" id="BrowEstado" name="BrowEstado" autocomplete="off"
+            ngModel />
+          <datalist id="browestados">
+            <option *ngFor="let cbxestad of cbxestado" value={{cbxestad}}>
+          </datalist>
+        </div>
+      </div>
 
     </div>
     <div class="row">
-     <br>
+      <br>
     </div>
-      <div class="row">
+    <div class="row">
 
       <div class="col-lg-4">
-        <button type="submit" class="btn btn-primary" [disabled]="!f.dirty" > Generar Lista
+        <button type="submit" class="btn btn-primary" [disabled]="!f.dirty"> Generar Lista
         </button>
       </div>
 
@@ -76,35 +162,38 @@
           <tr>
 
             <td>
-              <form #formularioPC="ngForm"
-                    novalidate
-              >
-              <div class="input-group-prepend">
-              <label class="input-group-text" for="BrowPCx">Ingresar Palabras claves</label>
-            </div>
+              <form #formularioPC="ngForm" novalidate>
+                <div class="input-group-prepend">
 
-              <input class="custom-select" list="browpc" id="BrowPCx" name="BrowPCx" ngModel />
-              <datalist id="browpc" >
-                <option *ngFor="let cbxpc of cbxpcs" value=  {{cbxpc}}>
-              </datalist>
 
-              <button  (click)="onClickRol(formularioPC)">
-                Agregar roles
-              </button></form>
+
+
+                  <label class="input-group-text" for="BrowPCx">Ingresar Palabras claves</label>
+                </div>
+
+                <input class="custom-select" list="browpc" id="BrowPCx" name="BrowPCx" ngModel />
+                <datalist id="browpc">
+                  <option *ngFor="let cbxpc of cbxpcs" value={{cbxpc}}>
+                </datalist>
+
+                <button (click)="onClickRol(formularioPC)">
+                  Agregar roles
+                </button>
+              </form>
             </td>
 
             <td>
 
 
-                <p>Eliminar Palabras claves</p>
+              <p>Eliminar Palabras claves</p>
 
-                <div *ngFor="let cbxpc of cbxpcs" >
+              <div *ngFor="let cbxpc of cbxpcs">
 
-                  <button  pButton type="button" icon="pi pi-times"  (click)="onClickMx(cbxpc)"  >
-                    {{cbxpc}} <strong>X</strong>
-                  </button>
+                <button pButton type="button" icon="pi pi-times" (click)="onClickMx(cbxpc)">
+                  {{cbxpc}} <strong>X</strong>
+                </button>
 
-                </div>
+              </div>
             </td>
 
 
@@ -116,54 +205,69 @@
 
     </div>
   </form>
+-->
 
 </div>
-<div class="container" >
-<div class="row">
 
-  <div class="col-md-6"><div class="table-responsive"  >
-    <p-table [columns]="cols" [(value)]="ActoresA" [paginator]="true" [rows]="10" *ngIf="estadotabla">
-      <ng-template pTemplate="header" let-columns>
-        <tr >
-          <th *ngFor="let col of columns" style="color: #fff; background-color: #337ab7; border-color: #337ab7;">
-            {{col.header}}
-          </th>
-        </tr>
-      </ng-template>
-      <ng-template pTemplate="body" let-ActoresA>
-        <tr >
-          <td valign="top" >{{ActoresA[0]}}
-          </td>
-          <td valign="top" >{{ActoresA[1]}}
-          </td>
-        </tr>
-      </ng-template>
-    </p-table>
-  </div></div>
 
-  <div class="col-md-6"><div class="table-responsive"  >
-    <p-table [columns]="cols" [(value)]="TemasA" [paginator]="true" [rows]="10" *ngIf="estadotabla">
-      <ng-template pTemplate="header" let-columns>
-        <tr >
-          <th *ngFor="let col of columns" style="color: #fff; background-color: #337ab7; border-color: #337ab7;">
-            {{col.header}}
-          </th>
-        </tr>
-      </ng-template>
-      <ng-template pTemplate="body" let-TemasA>
-        <tr >
-          <td valign="top" >{{TemasA[0]}}
-          </td>
-          <td valign="top" >{{TemasA[1]}}
-          </td>
-        </tr>
-      </ng-template>
-    </p-table>
-  </div></div>
+
+
+
+
+
+
+
+
+
+
+<div class="container">
+  <div class="row">
+
+    <div class="col-md-6">
+      <div class="table-responsive">
+        <p-table [columns]="cols" [(value)]="ActoresA" [paginator]="true" [rows]="10" *ngIf="estadotabla">
+          <ng-template pTemplate="header" let-columns>
+            <tr>
+              <th *ngFor="let col of columns" style="color: #fff; background-color: #337ab7; border-color: #337ab7;">
+                {{col.header}}
+              </th>
+            </tr>
+          </ng-template>
+          <ng-template pTemplate="body" let-ActoresA>
+            <tr>
+              <td valign="top">{{ActoresA[0]}}
+              </td>
+              <td valign="top">{{ActoresA[1]}}
+              </td>
+            </tr>
+          </ng-template>
+        </p-table>
+      </div>
+    </div>
+
+    <div class="col-md-6">
+      <div class="table-responsive">
+        <p-table [columns]="cols" [(value)]="TemasA" [paginator]="true" [rows]="10" *ngIf="estadotabla">
+          <ng-template pTemplate="header" let-columns>
+            <tr>
+              <th *ngFor="let col of columns" style="color: #fff; background-color: #337ab7; border-color: #337ab7;">
+                {{col.header}}
+              </th>
+            </tr>
+          </ng-template>
+          <ng-template pTemplate="body" let-TemasA>
+            <tr>
+              <td valign="top">{{TemasA[0]}}
+              </td>
+              <td valign="top">{{TemasA[1]}}
+              </td>
+            </tr>
+          </ng-template>
+        </p-table>
+      </div>
+    </div>
+  </div>
 </div>
-</div>
-</html>
+
 
 <router-outlet></router-outlet>
-
-
