--- a/FrontEnd/src/app/Rutas/ruta-pantalla-buscador/ruta-pantalla-buscador.component.css
+++ b/FrontEnd/src/app/Rutas/ruta-pantalla-buscador/ruta-pantalla-buscador.component.css
@@ -1,79 +1,29 @@
-/*.container {
-    border: 1px solid black;
-    background-image: linear-gradient(direction, color-stop1, color-stop2
-    );
-  }*/
-
-#centrador{
-  position: relative;
-  width: 40px;
-  height: 40px;
-  background-color: red;
+.view {
+  background: url("https://mdbootstrap.com/img/Photos/Others/img (40).jpg")no-repeat center center;
+  background-size: cover;
+  height: 100vh;
 }
 
-@media screen and (max-width: 70em) {
-  .mv-text-container{
-    white-space: normal !important;
-    text-overflow: initial !important;
-    overflow: auto !important;
-  }
-
-  .ui-table table {
-    width: 99%;
-  }
-
-  .ui-table-responsive .ui-table-thead > tr > th,
-  .ui-table-responsive .ui-table-tfoot > tr > td {
-    display: none !important;
-  }
-
-  .ui-table-responsive .ui-table-tbody > tr > td {
-    text-align: left !important;
-    display: block !important;
-    border: 0 none !important;
-    width: 100% !important;
-    -webkit-box-sizing: border-box !important;
-    -moz-box-sizing: border-box !important;
-    box-sizing: border-box !important;
-    float: left !important;
-    clear: left !important;
-  }
-
-  .ui-table-responsive .ui-table-tbody > tr > td .ui-column-title {
-    padding: .4em !important;
-    min-width: 30% !important;
-    display: inline-block !important;
-    margin: -.4em 1em -.4em -.4em !important;
-    font-weight: bold !important;
-  }
-
-
-  tr > td {
-    text-align: left !important;
-    border: 0px !important;
-    padding-left: 15px !important;
-  }
-
-  tr > th > {
-    border: 0px !important;
-    text-align: left !important;
-  }
-
-  tr {
-    border: 1px solid #D5D5D5 !important;
-  }
-
-  tr > td:last-child {
-    padding-bottom: 15px !important;
-    margin-bottom: 0 !important;
-  }
-
-  tr > td:first-child {
-    padding-top: 15px !important;
-  }
-}
-h1, h2, h3, h4, h5, h6 {
-  color: var(--primary);
-  font-weight: 700;
+.navbar {
+  background-color: transparent;
 }
 
+@media (min-width: 600px) {
+  .navbar.scrolling-navbar {
+    padding-bottom: 12px;
+    padding-top: 12px;
+    transition: background .5s ease-in-out,padding .5s ease-in-out;
+}
+}
+
+
+.top-nav-collapse {
+  background-color: #4285F4;
+
+}
+
+@media only screen and (max-width: 768px) {
+  .navbar {
+      background-color: #4285F4;
+  }
+}
