fuente comercio y doaj agregadas

--- a/FrontEnd/src/app/Rutas/ruta-pantalla-buscador/ruta-pantalla-buscador.component.html
+++ b/FrontEnd/src/app/Rutas/ruta-pantalla-buscador/ruta-pantalla-buscador.component.html
@@ -116,7 +116,7 @@
 
     <img *ngIf="!botonProcesarActivado" width="600" height="100" src="../../../assets/internetcargado.gif" alt="">
 
-    <button *ngIf="botonProcesarActivado" class="btn btn-info my-4 btn-block" type="submit" (click)="progressBar.start()"
+    <button *ngIf="botonProcesarActivado" class="btn btn-info my-4 btn-block" type="submit"
       [disabled]="!f.dirty">Generar lista</button>
   
 
