--- a/FrontEnd/src/app/Rutas/ruta-pantalla-buscador/ruta-pantalla-buscador.component.html
+++ b/FrontEnd/src/app/Rutas/ruta-pantalla-buscador/ruta-pantalla-buscador.component.html
@@ -31,32 +31,44 @@
 
 
       <div class="col-md-6 mb-4">
-        <div class="custom-control custom-checkbox">
+        <small id="BrowQuery" class="form-text text-muted mb-2">
+          Ingles
+        </small>
 
-          <input type="checkbox" class="custom-control-input" name="nyts" [(ngModel)]="nytmodel" id="nyt">
+        <div class="custom-control custom-checkbox">
+          <input type="checkbox" [disabled]="comerciomodel || doajmodeles" class="custom-control-input" name="nyts" [(ngModel)]="nytmodel" id="nyt">
           <label class="custom-control-label" for="nyt">The New York Times</label>
-
-
         </div>
-        <div class="custom-control custom-checkbox">
-          <input type="checkbox" class="custom-control-input" name="comercio" [(ngModel)]="comerciomodel" id="comercio">
-          <label class="custom-control-label" for="comercio">El comercio</label>
 
+
+        <div class=" custom-control custom-checkbox">
+          <input type="checkbox" [disabled]="comerciomodel || doajmodeles" class="custom-control-input" name="scielo" [(ngModel)]="scielomodel" id="scielo">
+          <label class="custom-control-label" for="scielo">SciELO</label>
         </div>
+
+        <div class=" custom-control custom-checkbox">
+          <input type="checkbox" [disabled]="comerciomodel || doajmodeles" class="custom-control-input" name="doaj" [(ngModel)]="doajmodel" id="doaj">
+          <label class="custom-control-label" for="doaj">DOAJ</label>
+        </div>
+
 
       </div>
       <div class="col-md-6">
-        <div class=" custom-control custom-checkbox">
-          <input type="checkbox" class="custom-control-input" name="scielo" [(ngModel)]="scielomodel" id="scielo">
-          <label class="custom-control-label" for="scielo">SciELO</label>
+        <small id="BrowQuery" class="form-text text-muted mb-2">
+          Español
+        </small>
 
+        <div class="custom-control custom-checkbox">
+          <input type="checkbox" [disabled]="scielomodel || doajmodel || nytmodel" class="custom-control-input" name="comercio" [(ngModel)]="comerciomodel" id="comercio">
+          <label class="custom-control-label" for="comercio">El comercio</label>
         </div>
 
         <div class=" custom-control custom-checkbox">
-          <input type="checkbox" class="custom-control-input" name="doaj" [(ngModel)]="doajmodel" id="doaj">
-          <label class="custom-control-label" for="doaj">DOAJ</label>
-
+          <input type="checkbox" [disabled]="scielomodel || doajmodel || nytmodel" class="custom-control-input" name="doajes" [(ngModel)]="doajmodeles" id="doajes">
+          <label class="custom-control-label" for="doajes">DOAJ</label>
         </div>
+
+
       </div>
 
     </div>
@@ -118,19 +130,20 @@
 
     <button *ngIf="botonProcesarActivado" class="btn btn-info my-4 btn-block" type="submit"
       [disabled]="!f.dirty">Generar lista</button>
-  
 
-    
+
+
 
 
 
 
   </form>
 
-  <ng-progress #progressBar direction=ltr speed=2000 trickleSpeed=9000 debounceTime=500 meteor=true spinner=true spinnerPosition=right
-  thick=true fixed=true min=1 max=99 ease=linear color=blue started=onStarted() completed=onCompleted()></ng-progress>
+  <ng-progress #progressBar direction=ltr speed=2000 trickleSpeed=9000 debounceTime=500 meteor=true spinner=true
+    spinnerPosition=right thick=true fixed=true min=1 max=99 ease=linear color=blue started=onStarted()
+    completed=onCompleted()></ng-progress>
 
-  
+
   <!--
 
   <form (ngSubmit)="pruebBoton(f)" novalidate>
