--- a/FrontEnd/src/app/Rutas/ruta-pantalla-buscador/ruta-pantalla-buscador.component.css
+++ b/FrontEnd/src/app/Rutas/ruta-pantalla-buscador/ruta-pantalla-buscador.component.css
@@ -5,7 +5,7 @@
 }
 
 .navbar {
-  background-color: transparent;
+  background-color: dark;
 }
 
 @media (min-width: 600px) {
@@ -26,4 +26,9 @@
   .navbar {
       background-color: #4285F4;
   }
+}
+
+.imagenResponsive{
+  width: 90%;
+  height: auto;
 }
