mejoras en carga y agregar palabras clave

--- a/FrontEnd/src/app/Rutas/ruta-pantalla-buscador/ruta-pantalla-buscador.component.html
+++ b/FrontEnd/src/app/Rutas/ruta-pantalla-buscador/ruta-pantalla-buscador.component.html
@@ -139,7 +139,7 @@
 
   </form>
 
-  <ng-progress #progressBar direction=ltr speed=2000 trickleSpeed=9000 debounceTime=500 meteor=true spinner=true
+  <ng-progress #progressBar direction=ltr speed=2000 trickleSpeed=9000 debounceTime=500 meteor=true spinner=flase
     spinnerPosition=right thick=true fixed=true min=1 max=99 ease=linear color=blue started=onStarted()
     completed=onCompleted()></ng-progress>
 
